<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2016 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Quake Report</string>

    <!-- Default text to show with the earthquake location ("Near the Pacific-Antarctic Ridge")
         if no specific kilometer distance from the primary location is given [CHAR LIMIT=30] -->
    <string name="near_the">Near the</string>

    <string name="no_earthquakes_found">No earthquakes found.</string>
    <string name="no_internet">No internet connection</string>
    <!-- Settings Menu Item [CHAR LIMIT=NONE] -->
    <string name="settings_menu_item">Settings</string>
    <!-- Settings Activity Title [CHAR LIMIT=NONE] -->
    <string name="settings_title">Earthquake Settings</string>
    <!-- Strings For Minimum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_min_magnitude_label">Minimum Magnitude</string>
    <string name="settings_min_magnitude_key" translatable="false">min_magnitude</string>
    <string name="settings_min_magnitude_default" translatable="false">6.0</string>

    <!-- Strings For Limit Preference [CHAR LIMIT=30] -->
    <string name="settings_limit_label">Result Limit</string>
    <string name="settings_limit_key" translatable="false">limit</string>
    <string name="settings_limit_default" translatable="false">10</string>

    <!-- Strings For Maximum Magnitude Preference [CHAR LIMIT=30] -->
    <string name="settings_max_magnitude_label">Maximum Magnitude</string>
    <string name="settings_max_magnitude_key" translatable="false">max_magnitude</string>
    <string name="settings_max_magnitude_default" translatable="false">10</string>

    <!-- Strings For Order By Preference [CHAR LIMIT=30] -->
    <string name="settings_orderby_label">Result Order</string>
    <string name="settings_orderby_key">orderby</string>
    <string name="settings_orderby_default">time</string>
    <string name="menu_refresh">Refresh</string>
    <string name="lost_connection">You\'ve lost internet connection :(</string>
    <string name="retry">Retry</string>

    <string name="facebook_app_id">[APP_ID]</string>
    <string name="fb_login_protocol_scheme">fb[APP_ID]</string>


</resources>
