<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_max_magnitude_default"
        android:title="@string/settings_max_magnitude_label"
        android:key="@string/settings_max_magnitude_key"
        android:entries="@array/zeroToTen_values"
        android:entryValues="@array/zeroToTen_labels" />

    <ListPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:title="@string/settings_min_magnitude_label"
        android:key="@string/settings_min_magnitude_key"
        android:entries="@array/zeroToTen_values"
        android:entryValues="@array/zeroToTen_labels"
        android:dialogLayout="@layout/earthquake_list_item"/>

    <ListPreference
        android:title="@string/settings_orderby_label"
        android:defaultValue="@string/settings_orderby_default"
        android:key="@string/settings_orderby_key"
        android:entries="@array/orderby_label"
        android:entryValues="@array/orderby"/>

    <EditTextPreference
        android:title="@string/settings_limit_label"
        android:key="@string/settings_limit_key"
        android:defaultValue="@string/settings_limit_default"
        android:inputType="number"/>

</PreferenceScreen>